# cobra-oop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cobra/: __init__.py  access.py  base.py  decorators.py  enums.py  exceptions.py  fields.py  policy.py  runtime.py  utils.py
docs/: architecture.md  roadmap.md
examples/: basic_private.py
notes/: future.md  ideas.md  interview-notes.md  research.md
tests/: __init__.py  test_final.py  test_friend.py  test_override.py  test_private.py  test_protected.py  test_runtime_validation.py
