[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cobra-oop"
version = "0.1.0"
description = "Comprehensive Object-Based Runtime Architecture"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

authors = [
  {name = "Vishnu Swaroop"}
]



dependencies = []